--- a/spa/angular.json
+++ b/spa/angular.json
@@ -23,9 +23,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@okta/okta-signin-widget/dist/css/okta-sign-in.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/@okta/okta-signin-widget/dist/js/okta-sign-in.js"
+            ]
           },
           "configurations": {
             "production": {
