--- a/spa/package.json
+++ b/spa/package.json
@@ -21,8 +21,9 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "@okta/okta-angular": "^5.2.0",
-    "@okta/okta-auth-js": "^6.8.0",
+    "@okta/okta-angular": "^5.1.0",
+    "@okta/okta-auth-js": "6.4.5",
+    "@okta/okta-signin-widget": "6.3.3",
     "hammerjs": "^2.0.8",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
