--- a/spa/tsconfig.json
+++ b/spa/tsconfig.json
@@ -15,9 +15,11 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
+    "noImplicitAny": false,
     "importHelpers": true,
     "target": "es2020",
     "module": "es2020",
+    "allowSyntheticDefaultImports": true,
     "lib": [
       "es2020",
       "dom"
